--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+    "homepage": "https://denystabachuk.github.io/lab8-fron-end-react/",
     "name": "lab8",
     "version": "0.1.0",
     "private": true,
