fixed typos in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "https://denystabachuk.github.io/lab8-fron-end-react/",
+    "homepage": "https://denystabachuk.github.io/lab8-front-end-react/",
     "name": "lab8",
     "version": "0.1.0",
     "private": true,
